--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -372,6 +372,7 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/BluePrints/Chara/TestChara.TestChara
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
