--- a/MyProject/Config/DefaultGameplayTags.ini
+++ b/MyProject/Config/DefaultGameplayTags.ini
@@ -27,11 +27,13 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="1_Attack.0_State.0_Shot.1_Walk",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.0_Shot.2_Step",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.0_Shot.3_Jett",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.0_Shot.4_FinishStepJett",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.0_Default",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.1_Walk",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.2_Step",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.3_Jett",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.1_Shot.4_FinishStepJett",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.0_Shot",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.1_shot",DevComment="")
@@ -49,4 +51,17 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="3_Cancel.0_State.2_JettShot1",DevComment="")
 +GameplayTagList=(Tag="3_Cancel.1_Trigger",DevComment="")
 +GameplayTagList=(Tag="3_Cancel.1_Trigger.0_Jett",DevComment="")
++GameplayTagList=(Tag="4_Camera",DevComment="")
++GameplayTagList=(Tag="4_Camera.0_State",DevComment="")
++GameplayTagList=(Tag="4_Camera.0_State.0_LockON",DevComment="")
++GameplayTagList=(Tag="4_Camera.0_State.1_CameraMove",DevComment="")
++GameplayTagList=(Tag="4_Camera.0_State.2_LockOFF",DevComment="")
++GameplayTagList=(Tag="4_Camera.0_State.3_LockON_Camera",DevComment="")
++GameplayTagList=(Tag="4_Camera.0_State.4_ChangeTarget",DevComment="")
++GameplayTagList=(Tag="4_Camera.1_Trigger",DevComment="")
++GameplayTagList=(Tag="4_Camera.1_Trigger.0_LockON",DevComment="")
++GameplayTagList=(Tag="4_Camera.1_Trigger.1_CameraMove",DevComment="")
++GameplayTagList=(Tag="4_Camera.1_Trigger.2_LockOFF",DevComment="")
++GameplayTagList=(Tag="4_Camera.1_Trigger.3_LockON_Camera",DevComment="")
++GameplayTagList=(Tag="4_Camera.1_Trigger.4_ChangeTarget",DevComment="")
 
