--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -292,8 +292,8 @@ TakeRecorderWorldSourceSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
-GA_Test_C="\"Object\" \"Object.Tags.AbilityTags.GameplayTags.GameplayTags[0]\" \"Object.Tags.ActivationOwnedTags.GameplayTags.GameplayTags[0]\" \"Object.Tags.ActivationRequiredTags.GameplayTags.GameplayTags[0]\" \"Object.Tags.CancelAbilitiesWithTag.GameplayTags.GameplayTags[0]\" \"Object.Tags.BlockAbilitiesWithTag.GameplayTags.GameplayTags[0]\" \"Object.Tags.BlockAbilitiesWithTag.GameplayTags.GameplayTags[1]\" "
-GameplayAbility="\"Object\" \"Object.Tags.AbilityTags.GameplayTags.GameplayTags[0]\" \"Object.Tags.ActivationOwnedTags.GameplayTags.GameplayTags[0]\" \"Object.Tags.ActivationRequiredTags.GameplayTags.GameplayTags[0]\" \"Object.Tags.CancelAbilitiesWithTag.GameplayTags.GameplayTags[0]\" \"Object.Tags.BlockAbilitiesWithTag.GameplayTags.GameplayTags[0]\" \"Object.Tags.BlockAbilitiesWithTag.GameplayTags.GameplayTags[1]\" "
+GA_Test_C="\"Object\" "
+GameplayAbility="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -349,6 +349,7 @@ GA_3Jett_1Shot_C_C="\"Object\" \"Object.Tags.AbilityTags.GameplayTags.GameplayTa
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=GameplayAbilitiesEditor
@@ -357,7 +358,6 @@ RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=GameplayAbilitiesEditor
@@ -414,19 +414,19 @@ PerWorldEditorSettings=(("/Game/map/NewMap.NewMap", (LoadedEditorRegions=((Min=(
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/BluePrints/Chara/TestChara
-MRUItem1=/Game/BluePrints/Datatable/DT_Abilities
-MRUItem2=/Game/BluePrints/Datatable/ST_Abilities
-MRUItem3=/Game/BluePrints/Abilities/0_Movements/GA_3Jett_0Cancell
-MRUItem4=/Game/BluePrints/Abilities/1_Attack/GA_2Step_1Shot_C
-MRUItem5=/Game/BluePrints/Abilities/1_Attack/GA_3Jett_1Shot_C
-MRUItem6=/Game/BluePrints/Abilities/0_Movements/GA_2Step
-MRUItem7=/Game/BluePrints/Abilities/1_Attack/GA_0Default_0Shot
-MRUItem8=/Game/BluePrints/EnhancedInputs/TestPlayer
-MRUItem9=/Game/BluePrints/Abilities/1_Attack/GA_3Jett_1Shot
-MRUItem10=/Game/BluePrints/Abilities/1_Attack/GA_2Step_1Shot
-MRUItem11=/Game/BluePrints/Abilities/1_Attack/GA_1Walk_1Shot
-MRUItem12=/Game/BluePrints/Abilities/1_Attack/GA_0Defaut_1Shot
-MRUItem13=/Game/BluePrints/Abilities/Tests/GA_Test
+MRUItem1=/Game/BluePrints/Abilities/Tests/GA_Test
+MRUItem2=/Game/BluePrints/Datatable/DT_Abilities
+MRUItem3=/Game/BluePrints/Datatable/ST_Abilities
+MRUItem4=/Game/BluePrints/Abilities/0_Movements/GA_3Jett_0Cancell
+MRUItem5=/Game/BluePrints/Abilities/1_Attack/GA_2Step_1Shot_C
+MRUItem6=/Game/BluePrints/Abilities/1_Attack/GA_3Jett_1Shot_C
+MRUItem7=/Game/BluePrints/Abilities/0_Movements/GA_2Step
+MRUItem8=/Game/BluePrints/Abilities/1_Attack/GA_0Default_0Shot
+MRUItem9=/Game/BluePrints/EnhancedInputs/TestPlayer
+MRUItem10=/Game/BluePrints/Abilities/1_Attack/GA_3Jett_1Shot
+MRUItem11=/Game/BluePrints/Abilities/1_Attack/GA_2Step_1Shot
+MRUItem12=/Game/BluePrints/Abilities/1_Attack/GA_1Walk_1Shot
+MRUItem13=/Game/BluePrints/Abilities/1_Attack/GA_0Defaut_1Shot
 MRUItem14=/Game/BluePrints/Abilities/1_Attack/GA_1Walk_0Shot
 MRUItem15=/Game/BluePrints/Abilities/1_Attack/GA_3Jett_0Shot
 MRUItem16=/Game/BluePrints/Abilities/1_Attack/GA_2Step_0Shot
@@ -457,7 +457,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/UE/MyProject/GAS_Test_ET/MyProject/Content/map
+UNR=../../../../../../Users/k2525/OneDrive/ドキュメント/GitHub/GAS_Test_ET/MyProject/Content/map
 BRUSH=D:/UE/MyProject/Content/
 FBX=D:/UE/MyProject/Content/
 FBXAnim=D:/UE/MyProject/Content/
@@ -2398,6 +2398,8 @@ GA_3Jett_1Shot_C_C.Advanced=True
 GA_3Jett_1Shot_C_C.Costs=True
 GA_3Jett_1Shot_C_C.Triggers=True
 GA_3Jett_1Shot_C_C.Cooldowns=True
+GA_Test_C.デフォルト=True
+TestChara_C.デフォルト=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
