基本戦闘システム

--- a/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -28,11 +28,11 @@ Manager2_Damage.0_State.1_KnockBack.Expanded=True
 Manager2_Damage.0_State.2_Toss.Expanded=True
 Manager3_WakeUP.Expanded=True
 Manager2_Damage.0_State.3_WakeUP.Expanded=True
-0_Movement.Expanded=False
+0_Movement.Expanded=True
 0_Movement.1_Trigger.Expanded=False
 0_Movement.0_State.Expanded=False
 1_Attack.Expanded=True
-1_Attack.0_State.Expanded=True
+1_Attack.0_State.Expanded=False
 1_Attack.1_Trigger.Expanded=True
 Manager0_Movement.1_Trigger.2_Step.Expanded=True
 Manager0_Movement.1_Trigger.Expanded=False
@@ -49,7 +49,7 @@ Manager3_Cancel.1_Trigger.Expanded=False
 Manager3_Cancel.1_Trigger.Jett.Expanded=True
 Manager3_Cancel.1_Trigger.0_Jett.Expanded=True
 Manager3_Cancel.0_State.0_Jett.Expanded=True
-3_Cancel.Expanded=True
+3_Cancel.Expanded=False
 3_Cancel.1_Trigger.Expanded=True
 3_Cancel.0_State.Expanded=True
 Manager1_Attack.0_State.0_Shot.0_Default.Expanded=True
