--- a/MyProject/Config/DefaultGameplayTags.ini
+++ b/MyProject/Config/DefaultGameplayTags.ini
@@ -20,6 +20,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="0_Movement.1_Trigger.1_Walk",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.2_Step",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.3_Jett",DevComment="")
++GameplayTagList=(Tag="0_Movement.1_Trigger.4_SetJettTime",DevComment="")
 +GameplayTagList=(Tag="1_Attack",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.0_Shot",DevComment="")
@@ -34,9 +35,15 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.2_Step",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.3_Jett",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.1_Shot.4_FinishStepJett",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.2_melee",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.2_melee.0_Default",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.2_melee.1_Walk",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.2_melee.2_Step",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.2_melee.3_Jett",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.0_Shot",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.1_shot",DevComment="")
++GameplayTagList=(Tag="1_Attack.1_Trigger.2_melee",DevComment="")
 +GameplayTagList=(Tag="2_Damage",DevComment="")
 +GameplayTagList=(Tag="2_Damage.0_State",DevComment="")
 +GameplayTagList=(Tag="2_Damage.0_State.0_LeanBack",DevComment="")
