パッドアサイン

--- a/MyProject/Config/DefaultGameplayTags.ini
+++ b/MyProject/Config/DefaultGameplayTags.ini
@@ -15,12 +15,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="0_Movement.0_State.1_Walk",DevComment="")
 +GameplayTagList=(Tag="0_Movement.0_State.2_Step",DevComment="")
 +GameplayTagList=(Tag="0_Movement.0_State.3_Jett",DevComment="")
++GameplayTagList=(Tag="0_Movement.0_State.4_Jump",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.0_Default",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.1_Walk",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.2_Step",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.3_Jett",DevComment="")
 +GameplayTagList=(Tag="0_Movement.1_Trigger.4_SetJettTime",DevComment="")
++GameplayTagList=(Tag="0_Movement.1_Trigger.5_Jump",DevComment="")
 +GameplayTagList=(Tag="1_Attack",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.0_Shot",DevComment="")
