近接アニメーション

--- a/MyProject/Config/DefaultGameplayTags.ini
+++ b/MyProject/Config/DefaultGameplayTags.ini
@@ -42,10 +42,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="1_Attack.0_State.2_melee.1_Walk",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.2_melee.2_Step",DevComment="")
 +GameplayTagList=(Tag="1_Attack.0_State.2_melee.3_Jett",DevComment="")
++GameplayTagList=(Tag="1_Attack.0_State.2_melee.4_HitStop",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.0_Shot",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.1_shot",DevComment="")
 +GameplayTagList=(Tag="1_Attack.1_Trigger.2_melee",DevComment="")
++GameplayTagList=(Tag="1_Attack.1_Trigger.3_HitStop",DevComment="")
 +GameplayTagList=(Tag="2_Damage",DevComment="")
 +GameplayTagList=(Tag="2_Damage.0_State",DevComment="")
 +GameplayTagList=(Tag="2_Damage.0_State.0_LeanBack",DevComment="")
