--- a/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -19,7 +19,7 @@ Manager0_Movement.0_Default.Expanded=True
 Manager0_Movement.1_Walk.Expanded=True
 Manager0_Movement.2_Step.Expanded=True
 Manager0_Movement.3_Jett.Expanded=True
-Manager1_Attack.Expanded=False
+Manager1_Attack.Expanded=True
 Manager2_Damage.Expanded=False
 Manager2_Damage.0_State.Expanded=False
 Manager2_Damage.1_Trigger.Expanded=True
@@ -33,7 +33,7 @@ Manager2_Damage.0_State.3_WakeUP.Expanded=True
 0_Movement.0_State.Expanded=False
 1_Attack.Expanded=True
 1_Attack.0_State.Expanded=False
-1_Attack.1_Trigger.Expanded=True
+1_Attack.1_Trigger.Expanded=False
 Manager0_Movement.1_Trigger.2_Step.Expanded=True
 Manager0_Movement.1_Trigger.Expanded=False
 Manager0_Movement.0_State.Expanded=False
@@ -42,7 +42,7 @@ Manager1_Attack.0_State.Expanded=True
 Manager1_Attack.1_Trigger.Expanded=True
 Manager0_Movement.0_State.3_Jett.Expanded=True
 Manager0_Movement.1_Trigger.3_jett.Expanded=True
-Manager3_Cancel.Expanded=True
+Manager3_Cancel.Expanded=False
 Manager3_Cancel.0_Trigger.Expanded=True
 Manager3_Cancel.0_State.Expanded=True
 Manager3_Cancel.1_Trigger.Expanded=False
@@ -57,14 +57,18 @@ Manager1_Attack.0_State.0_Shot.Expanded=True
 Manager1_Attack.0_State.0_Shot.1_Walk.Expanded=True
 Manager1_Attack.0_State.0_Shot.2_step.Expanded=True
 Manager1_Attack.0_State.0_Shot.3_Jett.Expanded=True
-1_Attack.0_State.0_Shot.Expanded=True
+1_Attack.0_State.0_Shot.Expanded=False
 Manager1_Attack.1_Trigger.1_shot.Expanded=True
 Manager1_Attack.0_State.1_Shot.Expanded=True
 Manager1_Attack.0_State.1_Shot.0_Default.Expanded=True
 Manager1_Attack.0_State.1_Shot.1_Walk.Expanded=True
 Manager1_Attack.0_State.1_Shot.2_Step.Expanded=True
 Manager1_Attack.0_State.1_Shot.3_Jett.Expanded=True
-1_Attack.0_State.1_Shot.Expanded=True
+1_Attack.0_State.1_Shot.Expanded=False
 Manager3_Cancel.0_State.1_StepShot1.Expanded=True
 Manager3_Cancel.0_State.2_JettShot1.Expanded=True
+Manager1_Attack.1_Trigger.3_HitStop.Expanded=True
+1_Attack.0_State.2_melee.Expanded=True
+Manager1_Attack.0_State.2_melee.Expanded=True
+Manager1_Attack.0_State.2_melee.4_HitStop.Expanded=True
 
