--- a/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -33,7 +33,7 @@ Manager2_Damage.0_State.3_WakeUP.Expanded=True
 0_Movement.0_State.Expanded=False
 1_Attack.Expanded=True
 1_Attack.0_State.Expanded=False
-1_Attack.1_Trigger.Expanded=False
+1_Attack.1_Trigger.Expanded=True
 Manager0_Movement.1_Trigger.2_Step.Expanded=True
 Manager0_Movement.1_Trigger.Expanded=False
 Manager0_Movement.0_State.Expanded=False
