--- a/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -32,7 +32,7 @@ Manager2_Damage.0_State.3_WakeUP.Expanded=True
 0_Movement.1_Trigger.Expanded=False
 0_Movement.0_State.Expanded=False
 1_Attack.Expanded=True
-1_Attack.0_State.Expanded=False
+1_Attack.0_State.Expanded=True
 1_Attack.1_Trigger.Expanded=True
 Manager0_Movement.1_Trigger.2_Step.Expanded=True
 Manager0_Movement.1_Trigger.Expanded=False
@@ -71,4 +71,6 @@ Manager1_Attack.1_Trigger.3_HitStop.Expanded=True
 1_Attack.0_State.2_melee.Expanded=True
 Manager1_Attack.0_State.2_melee.Expanded=True
 Manager1_Attack.0_State.2_melee.4_HitStop.Expanded=True
+4_Camera.Expanded=True
+4_Camera.1_Trigger.Expanded=True
 
