ステップ　ジェット射撃の修正

--- a/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -29,11 +29,11 @@ Manager2_Damage.0_State.2_Toss.Expanded=True
 Manager3_WakeUP.Expanded=True
 Manager2_Damage.0_State.3_WakeUP.Expanded=True
 0_Movement.Expanded=True
-0_Movement.1_Trigger.Expanded=False
-0_Movement.0_State.Expanded=False
+0_Movement.1_Trigger.Expanded=True
+0_Movement.0_State.Expanded=True
 1_Attack.Expanded=True
 1_Attack.0_State.Expanded=True
-1_Attack.1_Trigger.Expanded=True
+1_Attack.1_Trigger.Expanded=False
 Manager0_Movement.1_Trigger.2_Step.Expanded=True
 Manager0_Movement.1_Trigger.Expanded=False
 Manager0_Movement.0_State.Expanded=False
@@ -57,7 +57,7 @@ Manager1_Attack.0_State.0_Shot.Expanded=True
 Manager1_Attack.0_State.0_Shot.1_Walk.Expanded=True
 Manager1_Attack.0_State.0_Shot.2_step.Expanded=True
 Manager1_Attack.0_State.0_Shot.3_Jett.Expanded=True
-1_Attack.0_State.0_Shot.Expanded=False
+1_Attack.0_State.0_Shot.Expanded=True
 Manager1_Attack.1_Trigger.1_shot.Expanded=True
 Manager1_Attack.0_State.1_Shot.Expanded=True
 Manager1_Attack.0_State.1_Shot.0_Default.Expanded=True
