アニメーションモンタージュから当たり判定を生成

--- a/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/MyProject/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -28,12 +28,12 @@ Manager2_Damage.0_State.1_KnockBack.Expanded=True
 Manager2_Damage.0_State.2_Toss.Expanded=True
 Manager3_WakeUP.Expanded=True
 Manager2_Damage.0_State.3_WakeUP.Expanded=True
-0_Movement.Expanded=True
+0_Movement.Expanded=False
 0_Movement.1_Trigger.Expanded=False
 0_Movement.0_State.Expanded=True
 1_Attack.Expanded=False
-1_Attack.0_State.Expanded=False
-1_Attack.1_Trigger.Expanded=False
+1_Attack.0_State.Expanded=True
+1_Attack.1_Trigger.Expanded=True
 Manager0_Movement.1_Trigger.2_Step.Expanded=True
 Manager0_Movement.1_Trigger.Expanded=True
 Manager0_Movement.0_State.Expanded=True
@@ -109,7 +109,7 @@ ManagerInputUserSettings.FailureReasons.NoMatchingMappings.Expanded=True
 ManagerInputUserSettings.Profiles.Expanded=True
 ManagerInputUserSettings.Profiles.Default.Expanded=True
 ManagerTests.GenericTag.Expanded=True
-0_Damage.Expanded=True
+0_Damage.Expanded=False
 0_Damage.0_Hirumi.Expanded=True
 Manager0_Damage.Expanded=False
 Manager0_Damage.0_State.Expanded=True
